--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -271,3 +271,195 @@ button.active {
 }
 
 /* RESULTS SHOW PAGE */
+
+.header {
+  display: flex;
+}
+
+.show-truck-name {
+  margin-bottom: 0;
+  font-size: 1.75rem;
+}
+
+.top-description-container {
+  border-bottom: 1px solid #e6e6e6;
+  padding-bottom: 10px;
+}
+
+.top-description-container p {
+  margin-bottom: 0;
+}
+
+.top-footer {
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 0;
+}
+
+.show-truck-img-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.show-image {
+  max-width: 300px;
+  width: 80%;
+}
+
+.show-truck-description {
+  margin-top: 1rem;
+  text-align: justify;
+  font-size: 15px;
+}
+
+.show-location-container {
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 1rem;
+}
+
+/* .show-info-container p {
+  margin-bottom: 0;
+} */
+
+.show-details-container {
+  margin: 1rem 20px;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.show-details-container button {
+  background: #bcd5ef;
+  color: #000;
+  border: none;
+  width: 48%;
+  max-width: 200px;
+}
+
+#show-map {
+  width: 100%;
+  height: 200px;
+  margin-bottom: 1rem;
+}
+
+.show-truck-location {
+  font-size: 0.9rem;
+  text-align: center;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+table {
+  text-align: center;
+}
+
+.table-right {
+  border-right: 1px solid #000;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 45% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  text-align: right;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.show-favourites-container {
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e6e6e6;
+  text-align: center;
+}
+
+.show-favourites-container p {
+  margin-bottom: 0;
+}
+
+.show-favourites-container button {
+  background: #bcd5ef;
+  color: #000;
+  border: none;
+  width: 100%;
+}
+
+.show-review-container {
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.show-review-container p {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.show-review-container textarea {
+  margin-top: 10px;
+  width: 100%;
+}
+
+.show-review-container button {
+  background: #bcd5ef;
+  color: #000;
+  border: none;
+  width: 100%;
+}
+
+.show-user-review-container {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.show-user-review-container p {
+  margin-bottom: 0;
+}
+
+.show-username {
+  font-size: 1.5rem;
+}
+
+.show-stars {
+  font-size: 0.9rem;
+  margin-bottom: 10px;
+}
+
+.individual-user-review {
+  margin-top: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e6e6e6;
+}
