--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -204,11 +204,8 @@ button.active {
 }
 
 .truck-container {
-  /* background: #bcd5ef; */
   display: flex;
-  /* margin: 10px 0; */
   border-bottom: 1px solid #e6e6e6;
-  /* border-radius: 0.5rem; */
 }
 
 .truck-container-image {
@@ -304,8 +301,8 @@ button.active {
 }
 
 .show-image {
-  max-width: 300px;
-  width: 80%;
+  max-width: 400px;
+  width: 100%;
 }
 
 .show-truck-description {
@@ -329,7 +326,7 @@ button.active {
   padding-bottom: 1rem;
   border-bottom: 1px solid #e6e6e6;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .show-details-container button {
@@ -429,8 +426,9 @@ table {
 }
 
 .show-review-container textarea {
-  margin-top: 10px;
   width: 100%;
+  height: 150px;
+  margin: 10px auto;
 }
 
 .show-review-container button {
@@ -450,7 +448,15 @@ table {
 }
 
 .show-username {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+}
+
+.show-comment {
+  font-size: 0.9rem;
+}
+
+.individual-user-review-header {
+  margin-bottom: 10px;
 }
 
 .show-stars {
@@ -462,4 +468,30 @@ table {
   margin-top: 1rem;
   padding-bottom: 1rem;
   border-bottom: 1px solid #e6e6e6;
+}
+
+.no-comments {
+  text-align: center;
+}
+
+/* FAVOURITES */
+
+.truck-container-favourite {
+  display: flex;
+}
+
+.truck-favourites-delete {
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.truck-favourites-delete button {
+  background: #bcd5ef;
+  color: #000;
+  border: none;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.favourites-title {
+  margin: 20px;
 }
