--- a/main_app/templates/results/show.html
+++ b/main_app/templates/results/show.html
@@ -142,16 +142,17 @@
     {% if user.is_authenticated and user.type == 'Eater'%}
     <form action="{% url 'create_review' truck.id %}" method="post">
         {% csrf_token %}
-        <select name="rating" required>
+        <select name="rating" class="form-select" required>
             <option value="" disabled selected>Select a rating</option>
             <option value="5">5</option>
             <option value="4">4</option>
             <option value="3">3</option>
             <option value="2">2</option>
             <option value="1">1</option>
-        </select> <br>
-        <textarea name="content" cols="30" rows="10" placeholder="Write comment here..."></textarea>
-        <input type="hidden" name="user" value="{{ user }}"> <br>
+        </select>
+        <textarea class="form-control" name="content" cols="30" rows="10"
+            placeholder="Write comment here..."></textarea>
+        <input type="hidden" name="user" value="{{ user }}">
         <button class="btn btn-primary">Submit</button>
     </form>
     {% elif person_review %}
@@ -165,24 +166,26 @@
     {% if reviews %}
     {% for review in reviews %}
     <div class="individual-user-review">
-        <p class="show-username">{{ review.user }}</p>
-        <p class="show-stars">
-            <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor"
-                    class="bi bi-star-fill" viewBox="0 0 16 16">
-                    <path
-                        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                </svg></span> {{ review.rating }} / 5 - <span>{{ review.date }}</span>
-        </p>
+        <div class="individual-user-review-header">
+            <p class="show-username">{{ review.user }}</p>
+            <p class="show-stars">
+                <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor"
+                        class="bi bi-star-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                    </svg></span> {{ review.rating }} / 5 - <span>{{ review.date }}</span>
+            </p>
+        </div>
         {% if review.content != "" %}
-        <p>{{ review.content }}</p>
+        <p class="show-comment">{{ review.content }}</p>
         {% endif %}
         {% if user.id == review.user.id %}
-        <a href="{% url 'delete_review' truck.id review.id %}">Delete</a>
+        <a class="remove-comment" href="{% url 'delete_review' truck.id review.id %}">Delete</a>
         {% endif %}
     </div>
     {% endfor %}
     {% else %}
-    <p>No comments yet</p>
+    <p class="no-comments">There are no comments yet</p>
     {% endif %}
 </div>
 
