--- a/main_app/templates/owners/edit.html
+++ b/main_app/templates/owners/edit.html
@@ -38,38 +38,38 @@
         </tr>
         <tr>
             <td>Monday</td>
-            <td><input type="time" class="open" name="monday_open" value="{{ hours.monday_open }}"></td>
-            <td><input type="time" class="close" name="monday_close" value="{{ hours.monday_close }}"></td>
+            <td><input type="time" class="open-hour" name="monday_open" value="{{ hours.monday_open }}"></td>
+            <td><input type="time" class="close-hour" name="monday_close" value="{{ hours.monday_close }}"></td>
         </tr>
         <tr>
             <td>Tuesday</td>
-            <td><input type="time" class="open" name="tuesday_open" value="{{ hours.tuesday_open }}"></td>
-            <td><input type="time" class="close" name="tuesday_close" value="{{ hours.tuesday_close }}"></td>
+            <td><input type="time" class="open-hour" name="tuesday_open" value="{{ hours.tuesday_open }}"></td>
+            <td><input type="time" class="close-hour" name="tuesday_close" value="{{ hours.tuesday_close }}"></td>
         </tr>
         <tr>
             <td>Wednesday</td>
-            <td><input type="time" class="open" name="wednesday_open" value="{{ hours.wednesday_open }}"></td>
-            <td><input type="time" class="close" name="wednesday_close" value="{{ hours.wednesday_close }}"></td>
+            <td><input type="time" class="open-hour" name="wednesday_open" value="{{ hours.wednesday_open }}"></td>
+            <td><input type="time" class="close-hour" name="wednesday_close" value="{{ hours.wednesday_close }}"></td>
         </tr>
         <tr>
             <td>Thursday</td>
-            <td><input type="time" class="open" name="thursday_open" value="{{ hours.thursday_open }}"></td>
-            <td><input type="time" class="close" name="thursday_close" value="{{ hours.thursday_close }}"></td>
+            <td><input type="time" class="open-hour" name="thursday_open" value="{{ hours.thursday_open }}"></td>
+            <td><input type="time" class="close-hour" name="thursday_close" value="{{ hours.thursday_close }}"></td>
         </tr>
         <tr>
             <td>Friday</td>
-            <td><input type="time" class="open" name="friday_open" value="{{ hours.friday_open }}"></td>
-            <td><input type="time" class="close" name="friday_close" value="{{ hours.friday_close }}"></td>
+            <td><input type="time" class="open-hour" name="friday_open" value="{{ hours.friday_open }}"></td>
+            <td><input type="time" class="close-hour" name="friday_close" value="{{ hours.friday_close }}"></td>
         </tr>
         <tr>
             <td>Saturday</td>
-            <td><input type="time" class="open" name="saturday_open" value="{{ hours.saturday_open }}"></td>
-            <td><input type="time" class="close" name="saturday_close" value="{{ hours.saturday_close }}"></td>
+            <td><input type="time" class="open-hour" name="saturday_open" value="{{ hours.saturday_open }}"></td>
+            <td><input type="time" class="close-hour" name="saturday_close" value="{{ hours.saturday_close }}"></td>
         </tr>
         <tr>
             <td>Sunday</td>
-            <td><input type="time" class="open" name="sunday_open" value="{{ hours.sunday_open }}"></td>
-            <td><input type="time" class="close" name="sunday_close" value="{{ hours.sunday_close }}"></td>
+            <td><input type="time" class="open-hour" name="sunday_open" value="{{ hours.sunday_open }}"></td>
+            <td><input type="time" class="close-hour" name="sunday_close" value="{{ hours.sunday_close }}"></td>
         </tr>
     </table>
     </div>
@@ -103,7 +103,7 @@
         <label>MENU</label>
     <table class="table menu">
         <tr>
-            <th>Food Name</th>
+            <th>Menu Item</th>
             <th>Description</th>
             <th>Price</th>
             <th></th>
@@ -132,6 +132,7 @@
     <button class="btn" style="width: 100%; background-color: #BCD5E3;">Update Listing</button>
 </form>
 </div>
+<br>
 <script>
     let menuTable = document.querySelector('.menu')
     let newMenuBtn = document.querySelector('.new-menu')
@@ -155,8 +156,8 @@
             menuTable.deleteRow(btn.parentElement.parentElement.rowIndex)
         })
     })
-    let openHour = document.querySelectorAll('.open')
-    let closeHour = document.querySelectorAll('.close')
+    let openHour = document.querySelectorAll('.open-hour')
+    let closeHour = document.querySelectorAll('.close-hour')
     let foodName = document.querySelectorAll('.food-name')
     let foodDescription = document.querySelectorAll('.food-description')
     let foodPrice = document.querySelectorAll('.food-price')
