--- a/main_app/templates/owners/new.html
+++ b/main_app/templates/owners/new.html
@@ -3,132 +3,144 @@
 
 <div class="container">
     <h1>NEW TRUCK</h1>
-<form name="new" action="{% url 'owners_create' user.id %}" onsubmit="return validateForm()" enctype="multipart/form-data" method="POST">
-    {% csrf_token %}
-    <div class="form-group">
-        <label>NAME</label>
-        <input type="text" name="name" class="form-control" placeholder="Enter truck name">
-    </div>
-    <br>
-    <div class="form-group">
-        <label>CURRENT LOCATION</label>
-        <input id="autocomplete" type="text" name="location" class="form-control">
-    </div>
-    <br>
-    <div class="form-group">
-        <label>ADD PHOTO</label>
-        <input type="file" name="photo-file" class="form-control">
-    </div>
-    <br>
-    <div class="form-group">
-        <label>DESCRIPTION</label>
-        <textarea class="form-control" name="description" rows="6" placeholder="Enter truck description"></textarea>
-    </div>
-    <br>
-    <div class="form-group">
-        <label>OPERATING HOURS</label>    
-    <table class="table">
-        <tr>
-            <th>Day</th>
-            <th>Open Hours</th>
-            <th>Close Hours</th>
-        </tr>
-        <tr>
-            <td>Monday</td>
-            <td><input type="time" class="open-hour" name="monday_open"></td>
-            <td><input type="time" class="close-hour" name="monday_close"></td>
-        </tr>
-        <tr>
-            <td>Tuesday</td>
-            <td><input type="time" class="open-hour" name="tuesday_open"></td>
-            <td><input type="time" class="close-hour" name="tuesday_close"></td>
-        </tr>
-        <tr>
-            <td>Wednesday</td>
-            <td><input type="time" class="open-hour" name="wednesday_open"></td>
-            <td><input type="time" class="close-hour" name="wednesday_close"></td>
-        </tr>
-        <tr>
-            <td>Thursday</td>
-            <td><input type="time" class="open-hour" name="thursday_open"></td>
-            <td><input type="time" class="close-hour" name="thursday_close"></td>
-        </tr>
-        <tr>
-            <td>Friday</td>
-            <td><input type="time" class="open-hour" name="friday_open"></td>
-            <td><input type="time" class="close-hour" name="friday_close"></td>
-        </tr>
-        <tr>
-            <td>Saturday</td>
-            <td><input type="time" class="open-hour" name="saturday_open"></td>
-            <td><input type="time" class="close-hour" name="saturday_close"></td>
-        </tr>
-        <tr>
-            <td>Sunday</td>
-            <td><input type="time" class="open-hour" name="sunday_open"></td>
-            <td><input type="time" class="close-hour" name="sunday_close"></td>
-        </tr>
-    </table>
-    </div>
-    <br>
-    <div class="form-row">
-        <label>TAGS</label>
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+    <form name="new" action="{% url 'owners_create' user.id %}" onsubmit="return validateForm()"
+        enctype="multipart/form-data" method="POST">
+        {% csrf_token %}
+        <div class="form-group">
+            <label>NAME</label>
+            <input type="text" name="name" class="form-control" placeholder="Enter truck name">
         </div>
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+        <br>
+        <div class="form-group">
+            <label>CURRENT LOCATION</label>
+            <input id="autocomplete" type="text" name="location" class="form-control">
         </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+        <br>
+        <div class="form-group">
+            <label>ADD PHOTO</label>
+            <input type="file" name="photo-file" class="form-control">
         </div>
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+        <br>
+        <div class="form-group">
+            <label>DESCRIPTION</label>
+            <textarea class="form-control" name="description" rows="6" placeholder="Enter truck description"></textarea>
         </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+        <br>
+        <div class="form-group">
+            <label>OPERATING HOURS</label>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Day</th>
+                        <th>Open Hours</th>
+                        <th>Close Hours</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Monday</td>
+                        <td><input type="time" class="open-hour" name="monday_open"></td>
+                        <td><input type="time" class="close-hour" name="monday_close"></td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td><input type="time" class="open-hour" name="tuesday_open"></td>
+                        <td><input type="time" class="close-hour" name="tuesday_close"></td>
+                    </tr>
+                    <tr>
+                        <td>Wednesday</td>
+                        <td><input type="time" class="open-hour" name="wednesday_open"></td>
+                        <td><input type="time" class="close-hour" name="wednesday_close"></td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td><input type="time" class="open-hour" name="thursday_open"></td>
+                        <td><input type="time" class="close-hour" name="thursday_close"></td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td><input type="time" class="open-hour" name="friday_open"></td>
+                        <td><input type="time" class="close-hour" name="friday_close"></td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td><input type="time" class="open-hour" name="saturday_open"></td>
+                        <td><input type="time" class="close-hour" name="saturday_close"></td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td><input type="time" class="open-hour" name="sunday_open"></td>
+                        <td><input type="time" class="close-hour" name="sunday_close"></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
-        </div>
-    </div>
-    <br>
-    <div class="form-group">
-        <label>MENU</label>
-    <table class="table menu">
-        <tr>
-            <th>Menu Item</th>
-            <th>Description</th>
-            <th>Price</th>
-            <th></th>
-        </tr>
-        <tr>
-            <td><input type="text" class="form-control food-name" name="food_name"></td>
-            <td><input type="text" class="form-control food-description" name="food_description"></td>
-            <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
-            <td><input type="submit" class="btn delete"style="width: 100%; background-color: #BCD5E3;" value="-"></td>
-        </tr>
-        <tr>
-            <td><input type="text" class="form-control food-name" name="food_name"></td>
-            <td><input type="text" class="form-control food-description" name="food_description"></td>
-            <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
-            <td><input type="submit" class="btn delete"style="width: 100%; background-color: #BCD5E3;" value="-"></td>
-        </tr>
-        <tr>
-            <td><input type="text" class="form-control food-name" name="food_name"></td>
-            <td><input type="text" class="form-control food-description" name="food_description"></td>
-            <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
-            <td><input type="submit" class="btn delete"style="width: 100%; background-color: #BCD5E3;" value="-"></td>
-        </tr>
-    </table>
-    </div>
-    <button type="button" class="btn new-menu" style="width: 100%; background-color: #BCD5E3;">Add More Items</button>
-    <br> <br>
-    <button class="btn" style="width: 100%; background-color: #BCD5E3;">Create New Listing</button>
-</form>
+        <br>
+        <div class="form-row">
+            <label>TAGS</label>
+            <div class="form-group col-md-6">
+                <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+            </div>
+            <div class="form-group col-md-6">
+                <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+                </div>
+            </div>
+            <br>
+            <div class="form-group">
+                <label>MENU</label>
+                <table class="table menu">
+                    <tr>
+                        <th>Menu Item</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <td><input type="text" class="form-control food-name" name="food_name"></td>
+                        <td><input type="text" class="form-control food-description" name="food_description"></td>
+                        <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01"
+                                name="food_price" placeholder="0.00"></td>
+                        <td><input type="submit" class="btn delete" style="width: 100%; background-color: #BCD5E3;"
+                                value="-"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" class="form-control food-name" name="food_name"></td>
+                        <td><input type="text" class="form-control food-description" name="food_description"></td>
+                        <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01"
+                                name="food_price" placeholder="0.00"></td>
+                        <td><input type="submit" class="btn delete" style="width: 100%; background-color: #BCD5E3;"
+                                value="-"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" class="form-control food-name" name="food_name"></td>
+                        <td><input type="text" class="form-control food-description" name="food_description"></td>
+                        <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01"
+                                name="food_price" placeholder="0.00"></td>
+                        <td><input type="submit" class="btn delete" style="width: 100%; background-color: #BCD5E3;"
+                                value="-"></td>
+                    </tr>
+                </table>
+            </div>
+            <button type="button" class="btn new-menu" style="width: 100%; background-color: #BCD5E3;">Add More
+                Items</button>
+            <br> <br>
+            <button class="btn" style="width: 100%; background-color: #BCD5E3;">Create New Listing</button>
+    </form>
 </div>
 <br>
 
@@ -163,17 +175,17 @@
     validateForm = () => {
         for (i = 0; i < openHour.length; i++) {
             if (openHour[i].value != "" && closeHour[i].value == "") {
-                    closeHour[i].required = true
-                    alert('enter closing time')
-                    return false;
+                closeHour[i].required = true
+                alert('enter closing time')
+                return false;
             }
         }
         for (i = 0; i < foodName.length; i++) {
             if (foodName[i].value != "" && foodDescription[i].value == "" || foodName[i].value != "" && foodPrice[i].value == "") {
-                    foodDescription[i].required = true
-                    foodPrice[i].required = true
-                    alert('complete food setup')
-                    return false;
+                foodDescription[i].required = true
+                foodPrice[i].required = true
+                alert('complete food setup')
+                return false;
             }
         }
     }
